--- a/src/App/Client/GoldEx.Client/Pages/Customers/Components/Create.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Customers/Components/Create.razor
@@ -38,7 +38,7 @@
                     <MudTextField HelperText="@_creditLimitHelperText" 
                                   Value="_model.CreditLimit"
                                   ValueChanged="OnCreditLimitChanged"
-                                  T="double?"
+                                  T="decimal?"
                                   Immediate="true"
                                   For="@(() => _model.CreditLimit)"
                                   Label="سقف اعتبار"
