--- a/src/App/Client/GoldEx.Client/Pages/Customers/Components/Update.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Customers/Components/Update.razor
@@ -38,7 +38,7 @@
                     <MudTextField HelperText="@_creditLimitHelperText"
                                   Value="Model.CreditLimit"
                                   ValueChanged="OnCreditLimitChanged"
-                                  T="double?"
+                                  T="decimal?"
                                   Immediate="true"
                                   For="@(() => Model.CreditLimit)"
                                   Label="سقف اعتبار"
