Refactoring client side

--- a/src/App/Client/GoldEx.Client/Pages/Settings/BaseInfo.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/BaseInfo.razor
@@ -45,26 +45,26 @@
         <MudItem xs="12" sm="4">
             <MudTextField Adornment="Adornment.End"
                           AdornmentIcon="@Icons.Material.Filled.Percent"
-                          @bind-Value="_model.Tax"
+                          @bind-Value="_model.TaxPercent"
                           Variant="Variant.Outlined"
                           Label="مالیات"
-                          For="() => _model.Tax"></MudTextField>
+                          For="() => _model.TaxPercent"></MudTextField>
         </MudItem>
         <MudItem xs="12" sm="4">
             <MudTextField Adornment="Adornment.End"
                           AdornmentIcon="@Icons.Material.Filled.Percent"
-                          @bind-Value="_model.GoldProfit"
+                          @bind-Value="_model.GoldProfitPercent"
                           Variant="Variant.Outlined"
                           Label="سود طلا"
-                          For="() => _model.GoldProfit"></MudTextField>
+                          For="() => _model.GoldProfitPercent"></MudTextField>
         </MudItem>
         <MudItem xs="12" sm="4">
             <MudTextField Adornment="Adornment.End"
                           AdornmentIcon="@Icons.Material.Filled.Percent"
-                          @bind-Value="_model.JewelryProfit"
+                          @bind-Value="_model.JewelryProfitPercent"
                           Variant="Variant.Outlined"
                           Label="سود جواهر"
-                          For="() => _model.JewelryProfit"></MudTextField>
+                          For="() => _model.JewelryProfitPercent"></MudTextField>
         </MudItem>
     </MudGrid>
     
