--- a/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Update.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Update.razor
@@ -58,7 +58,7 @@
                 <MudItem xs="12" md="6" lg="2" Class="pt-md-0 pt-lg-6">
                     <MudTextField Value="_model.CustomerCreditLimit"
                                   ValueChanged="OnCustomerCreditLimitChanged"
-                                  T="double?"
+                                  T="decimal?"
                                   Immediate="true"
                                   For="@(() => _model.CustomerCreditLimit)"
                                   HelperTextOnFocus="true"
@@ -163,7 +163,7 @@
                                 <MudTextField Value="_model.Credit"
                                               ValueChanged="OnCreditChanged"
                                               HelperText="@_creditHelperText"
-                                              T="double?"
+                                              T="decimal?"
                                               Immediate="true"
                                               For="@(() => _model.Credit)"
                                               Label="بستانکار"
@@ -188,7 +188,7 @@
                             <MudItem xs="12" md="4" lg="4">
                                 <MudTextField Value="_model.CreditRate"
                                               ValueChanged="OnCreditRateChanged"
-                                              T="double?"
+                                              T="decimal?"
                                               Immediate="true"
                                               HelperText="@_creditRateHelperText"
                                               For="@(() => _model.CreditRate)"
@@ -210,7 +210,7 @@
                                 <MudTextField Value="_model.Debit"
                                               ValueChanged="OnDebitChanged"
                                               HelperText="@_debitHelperText"
-                                              T="double?"
+                                              T="decimal?"
                                               Immediate="true"
                                               For="@(() => _model.Debit)"
                                               Label="بدهکار"
@@ -236,7 +236,7 @@
                                 <MudTextField Value="_model.DebitRate"
                                               ValueChanged="OnDebitRateChanged"
                                               HelperText="@_debitRateHelperText"
-                                              T="double?"
+                                              T="decimal?"
                                               Immediate="true"
                                               For="@(() => _model.DebitRate)"
                                               Label="نرخ تبدیل"
