--- a/src/App/Client/GoldEx.Client/Pages/Products/Components/Editor.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Products/Components/Editor.razor
@@ -1,41 +1,44 @@
-﻿@inherits GoldExComponentBase
+﻿@using GoldEx.Client.Pages.Settings.ViewModels
 
-<MudForm Model="_model" @ref="@_form" Validation="@(_productValidator.ValidateValue)" ValidationDelay="0">
+@inherits GoldExComponentBase
+
+<MudForm Model="Model" @ref="@_form" Validation="@(_productValidator.ValidateValue)" ValidationDelay="0">
     <MudDialog>
         <DialogContent>
             <MudGrid>
                 <MudItem xs="12" md="6" lg="6">
-                    <MudTextField @bind-Value="_model.Name"
-                                  For="@(() => _model.Name)"
+                    <MudTextField @bind-Value="Model.Name"
+                                  For="@(() => Model.Name)"
                                   Label="عنوان"
                                   Margin="Margin.Dense"
                                   Variant="Variant.Outlined" />
                 </MudItem>
                 <MudItem xs="12" md="6" lg="6">
-                    <MudSelect T="Guid?"
-                               @bind-Value="_model.ProductCategoryId"
+                    <MudSelect T="ProductCategoryVm?"
+                               Value="Model.CategoryVm"
+                               ValueChanged="OnProductCategoryChanged"
                                Label="دسته بندی"
-                               For="() => _model.ProductCategoryId"
+                               For="() => Model.CategoryVm"
                                Margin="Margin.Dense"
                                Variant="Variant.Outlined">
-                        <MudSelectItem T="Guid?" Value="@((Guid?)null)">انتخاب کنید</MudSelectItem>
                         @foreach (var item in _productCategories)
                         {
-                            <MudSelectItem Value="@((Guid?)item.Id)">@item.Title</MudSelectItem>
+                            <MudSelectItem Value="item">@item.Title</MudSelectItem>
                         }
                     </MudSelect>
                 </MudItem>
                 <MudItem xs="12" md="6" lg="6">
-                    <MudSelect For="() => _model.ProductType"
+                    <MudSelect For="() => Model.ProductType"
                                Label="نوع جنس"
                                Margin="Margin.Dense"
                                T="ProductType"
-                               Value="_model.ProductType"
+                               Value="Model.ProductType"
                                ValueChanged="OnProductTypeChanged"
                                Variant="Variant.Outlined">
                         @foreach (ProductType productType in Enum.GetValues(typeof(ProductType)))
                         {
-                            <MudSelectItem T="ProductType" Value="productType">
+                            <MudSelectItem T="ProductType"
+                                           Value="productType">
                                 @productType.GetDisplayName()
                             </MudSelectItem>
                         }
@@ -44,46 +47,45 @@
                 <MudItem xs="12" md="6" lg="6">
                     <MudNumericField Adornment="Adornment.End"
                                      AdornmentText="گرم"
-                                     @bind-Value="_model.Weight"
-                                     For="@(() => _model.Weight)"
+                                     @bind-Value="Model.Weight"
+                                     For="@(() => Model.Weight)"
                                      Label="وزن"
                                      Margin="Margin.Dense"
                                      Variant="Variant.Outlined" />
                 </MudItem>
-                @if (_model.ProductType is ProductType.Gold or ProductType.Jewelry)
-                {
-                    <MudItem xs="12" md="6" lg="6">
-                        <MudSelect For="() => _model.WageType"
-                                   Label="نوع اجرت"
-                                   Margin="Margin.Dense"
-                                   T="WageType?"
-                                   Value="_model.WageType"
-                                   ValueChanged="OnWageTypeChanged"
-                                   Variant="Variant.Outlined">
-                            <MudSelectItem Value="@((WageType?)null)">ندارد</MudSelectItem>
-                            @foreach (WageType wageType in Enum.GetValues(typeof(WageType)))
-                            {
-                                <MudSelectItem Value="@((WageType?)wageType)">@wageType.GetDisplayName()</MudSelectItem>
-                            }
-                        </MudSelect>
-                    </MudItem>
-                    <MudItem xs="12" md="6" lg="6">
-                        <MudNumericField Adornment="Adornment.End"
-                                         AdornmentText="@_wageAdornmentText"
-                                         For="@(() => _model.Wage)"
-                                         HelperText="@_wageHelperText"
-                                         Immediate="true"
-                                         Label="اجرت"
-                                         Margin="Margin.Dense"
-                                         T="double?"
-                                         Value="_model.Wage"
-                                         ValueChanged="OnWageChanged"
-                                         Variant="Variant.Outlined" />
-                    </MudItem>
-                }
                 <MudItem xs="12" md="6" lg="6">
-                    <MudSelect @bind-Value="_model.CaratType"
-                               For="() => _model.CaratType"
+                    <MudSelect For="() => Model.WageType"
+                               Label="نوع اجرت"
+                               Margin="Margin.Dense"
+                               T="WageType?"
+                               Value="Model.WageType"
+                               ValueChanged="OnWageTypeChanged"
+                               Variant="Variant.Outlined">
+                        <MudSelectItem Value="@((WageType?)null)">ندارد</MudSelectItem>
+                        @foreach (WageType wageType in Enum.GetValues(typeof(WageType)))
+                        {
+                            <MudSelectItem Value="@((WageType?)wageType)">
+                                @wageType.GetDisplayName()
+                            </MudSelectItem>
+                        }
+                    </MudSelect>
+                </MudItem>
+                <MudItem xs="12" md="6" lg="6">
+                    <MudNumericField Adornment="Adornment.End"
+                                     AdornmentText="@_wageAdornmentText"
+                                     For="@(() => Model.Wage)"
+                                     HelperText="@_wageHelperText"
+                                     Immediate="true"
+                                     Label="اجرت"
+                                     Margin="Margin.Dense"
+                                     T="decimal?"
+                                     Value="Model.Wage"
+                                     ValueChanged="OnWageChanged"
+                                     Variant="Variant.Outlined" />
+                </MudItem>
+                <MudItem xs="12" md="6" lg="6">
+                    <MudSelect @bind-Value="Model.CaratType"
+                               For="() => Model.CaratType"
                                Label="عیار"
                                Margin="Margin.Dense"
                                T="CaratType"
@@ -100,25 +102,26 @@
                 <MudItem xs="12" md="6" lg="6">
                     <MudStack Row AlignItems="AlignItems.Center">
                         <MudItem xs="10">
-                            <MudTextField @bind-Value="_model.Barcode"
-                                          For="@(() => _model.Barcode)"
+                            <MudTextField @bind-Value="Model.Barcode"
+                                          For="@(() => Model.Barcode)"
                                           Label="بارکد"
                                           Margin="Margin.Dense"
                                           Variant="Variant.Outlined" />
                         </MudItem>
-                        <MudItem xs="2" Class="pr-2">
+                        <MudItem xs="2">
                             <MudIconButton Color="Color.Primary"
-                                           OnClick="@(_ => GenerateBarcode())"
                                            Icon="@Icons.Material.Filled.Refresh"
-                                           Variant="Variant.Filled"></MudIconButton>
+                                           OnClick="@(_ => GenerateBarcode())"
+                                           Variant="Variant.Filled">
+                            </MudIconButton>
                         </MudItem>
                     </MudStack>
                 </MudItem>
-                @if (_model.ProductType is ProductType.Jewelry)
+                @if (Model.ProductType is ProductType.Jewelry)
                 {
-                    @if (_model.Stones is not null)
+                    @if (Model.Stones is not null)
                     {
-                        @for (var i = 0; i < _model.Stones.Count; i++)
+                        @for (var i = 0; i < Model.Stones.Count; i++)
                         {
                             var index = i;
 
@@ -132,38 +135,38 @@
                                 </MudText>
                             </MudItem>
                             <MudItem Key="@($"{i} code")" xs="12" md="2" Class="pt-0">
-                                <MudTextField @bind-Value="_model.Stones[index].Code"
-                                              For="() => _model.Stones[index].Code"
+                                <MudTextField @bind-Value="Model.Stones[index].Code"
+                                              For="() => Model.Stones[index].Code"
                                               Label="کد" Margin="Margin.Dense"
                                               T="string" Variant="Variant.Outlined"></MudTextField>
                             </MudItem>
                             <MudItem Key="@($"{i} type")" xs="12" md="2" Class="pt-0">
-                                <MudTextField @bind-Value="_model.Stones[index].Type"
-                                              For="() => _model.Stones[index].Type"
+                                <MudTextField @bind-Value="Model.Stones[index].Type"
+                                              For="() => Model.Stones[index].Type"
                                               Label="نوع سنگ" Margin="Margin.Dense"
                                               T="string" Variant="Variant.Outlined"></MudTextField>
                             </MudItem>
                             <MudItem Key="@($"{i} color")" xs="6" md="2" Class="pt-0">
-                                <MudTextField @bind-Value="_model.Stones[index].Color"
-                                              For="() => _model.Stones[index].Color"
+                                <MudTextField @bind-Value="Model.Stones[index].Color"
+                                              For="() => Model.Stones[index].Color"
                                               Label="رنگ" Margin="Margin.Dense"
                                               T="string" Variant="Variant.Outlined"></MudTextField>
                             </MudItem>
                             <MudItem Key="@($"{i} cut")" xs="6" md="2" Class="pt-0">
-                                <MudTextField @bind-Value="_model.Stones[index].Cut"
-                                              For="() => _model.Stones[index].Cut"
+                                <MudTextField @bind-Value="Model.Stones[index].Cut"
+                                              For="() => Model.Stones[index].Cut"
                                               Label="برش" Margin="Margin.Dense"
                                               T="string?" Variant="Variant.Outlined"></MudTextField>
                             </MudItem>
                             <MudItem Key="@($"{i} carat")" xs="6" md="2" Class="pt-0">
-                                <MudTextField @bind-Value="_model.Stones[index].Carat"
-                                              For="() => _model.Stones[index].Carat"
+                                <MudTextField @bind-Value="Model.Stones[index].Carat"
+                                              For="() => Model.Stones[index].Carat"
                                               Label="قیراط" Margin="Margin.Dense"
-                                              T="double" Variant="Variant.Outlined"></MudTextField>
+                                              T="decimal" Variant="Variant.Outlined"></MudTextField>
                             </MudItem>
                             <MudItem Key="@($"{i} purity")" xs="6" md="2" Class="pt-0">
-                                <MudTextField @bind-Value="_model.Stones[index].Purity"
-                                              For="() => _model.Stones[index].Purity"
+                                <MudTextField @bind-Value="Model.Stones[index].Purity"
+                                              For="() => Model.Stones[index].Purity"
                                               Label="پاکی" Margin="Margin.Dense"
                                               T="string?" Variant="Variant.Outlined"></MudTextField>
                             </MudItem>
@@ -185,9 +188,7 @@
             <MudButton Class="m-3"
                        Color="Color.Error"
                        OnClick="Close"
-                       Variant="Variant.Filled">
-                بستن
-            </MudButton>
+                       Variant="Variant.Filled">بستن</MudButton>
             <MudButton Class="m-3"
                        Color="Color.Primary"
                        Disabled="@_processing"
