--- a/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Editor.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Editor.razor
@@ -1,6 +1,6 @@
 ﻿@inherits GoldExComponentBase
 
-<MudForm Model="_model" @ref="@_form" Validation="@(_updateTransactionValidator.ValidateValue)" ValidationDelay="0">
+<MudForm Model="_model" @ref="@_form" Validation="@(_transactionValidator.ValidateValue)" ValidationDelay="0">
     <MudDialog>
         <DialogContent>
 
