--- a/src/App/Client/GoldEx.Client/Pages/Home/Components/PriceBoard.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Components/PriceBoard.razor
@@ -22,11 +22,11 @@
         <MudTh Class="mud-table-cell-custom-group" colspan="5">@($"{context.Key}")</MudTh>
     </GroupHeaderTemplate>
     <RowTemplate>
-        @if (!string.IsNullOrEmpty(context.IconFileBase64))
+        @if (context.HasIcon)
         {
             <MudTd DataLabel="">
                 <MudAvatar Size="Size.Small">
-                    <MudImage Src="@context.IconFileBase64" Alt="img" />
+                    <MudImage Src="@(ApiUrls.Icons.Get(IconType.Price, context.Id))" Alt="img" />
                 </MudAvatar>
             </MudTd>
         }
