--- a/src/App/Client/GoldEx.Client/Pages/Customers/Components/Remove.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Customers/Components/Remove.razor
@@ -7,6 +7,7 @@
     <DialogActions>
         <MudButton OnClick="Cancel">لغو</MudButton>
         <MudButton Class="m-3"
+                   StartIcon="@Icons.Material.Filled.Delete"
                    Color="Color.Error"
                    Disabled="@_processing"
                    OnClick="@(async () => await OnValidSubmit())"
