--- a/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Editor.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Editor.razor
@@ -250,15 +250,15 @@
 
         </DialogContent>
         <DialogActions>
-            <MudButton Class="m-3"
-                       Color="Color.Error"
+            <MudButton Color="Color.Error"
                        OnClick="Close"
-                       Variant="Variant.Filled">
-                بستن
-            </MudButton>
-            <MudButton Class="m-3"
+                       StartIcon="@Icons.Material.Filled.Close"
+                       Variant="Variant.Filled">بستن</MudButton>
+
+            <MudButton Class="m-2"
                        Color="Color.Primary"
                        Disabled="@_processing"
+                       StartIcon="@Icons.Material.Filled.Save"
                        OnClick="@(async () => await OnSubmit())"
                        Variant="Variant.Filled">
                 @if (_processing)
